# rolly

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.e2e.yaml  mise.toml
benches/: allocation_scaling.rs  baseline.toml  comparison_otel.rs  exporter_throughput.rs  generate_flamecharts.rs  hot_path.rs  metrics_encoding.rs  realistic_scenario.rs
docs/: article.md  prd-ro11y-v1.md
docs/flamecharts/: benchmark_results.toml
examples/: render_baseline.rs
fuzz/: Cargo.toml
src/: exporter.rs  lib.rs  metrics.rs  otlp_layer.rs  otlp_log.rs  otlp_metrics.rs  otlp_trace.rs  proto.rs  trace_id.rs  use_metrics.rs
src/tower/: mod.rs  propagation.rs  request.rs
tests/: backpressure.rs  collector_roundtrip.rs  e2e.rs  proptest_encoding.rs  sampling_concurrency.rs  shutdown_flush.rs  vector_e2e.rs  wire_compat.rs
