[package]
name = "ro11y"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
bytes = "1"
http = "1"
pin-project-lite = "0.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
